# Webframe-Package

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PYPI_DEPLOY.md  QUICKSTART.md  README.md  demo_kartik_webframe.ipynb  examples.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_package.py  tox.ini  upload_to_pypi.sh
.github/workflows/: publish.yml  tests.yml
tests/: __init__.py  test_grid.py  test_logger.py  test_pdf.py  test_site.py  test_validators.py  test_video.py
webframe/: __init__.py  exceptions.py  grid.py  logger.py  pdf.py  site.py  validators.py  video.py
