[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kartik-webframe"
version = "0.2.0"
description = "Render websites and videos inside Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Kartik Suryavanshi"}
]
keywords = ["jupyter", "notebook", "iframe", "youtube"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: Jupyter",
]

dependencies = [
    "ipython>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/KartikSuryavanshi/Webframe-Package"
Documentation = "https://github.com/KartikSuryavanshi/Webframe-Package#readme"
Repository = "https://github.com/KartikSuryavanshi/Webframe-Package"
"Bug Tracker" = "https://github.com/KartikSuryavanshi/Webframe-Package/issues"

[tool.setuptools]
packages = ["webframe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--verbose"]
