[metadata]
name = webframe
version = 0.1.0

[options]
zip_safe = False
include_package_data = True
# Minimum Python version requirement
python_requires = >=3.7

[options.packages.find]
where = .
include = webframe*
exclude = tests*

[bdist_wheel]
# Platform-specific wheel (not universal)
universal = 0
